--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "od-search",
-  "version": "0.1.0",
+  "version": "7.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service build --mode development --watch",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-flex": "^2.1.2",
+    "vue-localstorage": "^0.6.2",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -29,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-browser-extension": "~0.25.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
